crates/bevy_diegetic/tests/trybuild/fail/overlay_direction.rs
use bevy_diegetic::Direction;
use bevy_diegetic::El;

fn main() {
    let _ = El::overlay().direction(Direction::TopToBottom);
}
